<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LabsCM20191</string>
    <string name="category_dishes">Platos</string>
    <string name="category_drinks">Bebidas</string>
    <string name="placeholder" translatable="false">placeholder</string>
    <string name="add_dish">Agregar plato</string>
    <string name="dish_name">Nombre del plato</string>
    <string name="morning">Mañana</string>
    <string name="afternoon">Tarde</string>
    <string name="night">Noche</string>
    <string name="entree">Entrada</string>
    <string name="second">Plato fuerte</string>
    <string name="prepTime">Tiempo de preparación</string>
    <string name="price">Precio</string>
    <string name="ingredients">Ingredientes</string>
    <string name="time">Horario</string>
    <string name="dish_type">Tipo de plato</string>
    <string name="type_message">Tipo   \n<xliff:g example="Entrada" id="type">%s</xliff:g></string>
    <string name="prep_time_message">Tiempo de preparación:   <xliff:g example="5" id="prepTime">%d</xliff:g> minutos</string>
    <string name="price_message">Precio:  $<xliff:g example="50000" id="price">%d</xliff:g></string>
    <string name="ingredients_message">Ingredientes: <xliff:g example="paprika" id="ingredients">%s</xliff:g></string>
    <string name="time_message">Horario:          <xliff:g id="morning">%s</xliff:g>          <xliff:g id="afternoon">%s</xliff:g>          <xliff:g id="night">%s</xliff:g></string>
    <string name="drink_name">Nombre de la bebida</string>
    <string name="add_drink">Agregar bebida</string>
    <string name="clean">limpiar</string>
    <string name="close">Cerrar</string>
    <string name="img">imagen</string>


</resources>
