<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    tools:context="co.edu.udea.compumovil.gr04_20191.lab1.DishesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="co.edu.udea.compumovil.gr04_20191.lab1.DishesActivity">


            <EditText
                android:id="@+id/dish_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:text="@string/time" />

            <CheckBox
                android:id="@+id/morning_checkbox"
                style="@style/CheckboxStyle"
                android:layout_margin="8dp"
                android:text="@string/morning" />

            <CheckBox
                android:id="@+id/afternoon_checkbox"
                style="@style/CheckboxStyle"
                android:layout_margin="8dp"
                android:text="@string/afternoon" />

            <CheckBox
                android:id="@+id/night_checkbox"
                style="@style/CheckboxStyle"
                android:layout_margin="8dp"
                android:text="@string/night" />

            <TextView
                android:id="@+id/dish_type_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:text="@string/dish_type" />

            <RadioGroup
                android:id="@+id/type_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/entree_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/entree" />

                <RadioButton
                    android:id="@+id/second_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/second" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prep_time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/prepTime"
                    android:textAlignment="center" />

                <NumberPicker
                    android:id="@+id/prep_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <EditText
                android:id="@+id/price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number" />


            <EditText
                android:id="@+id/ingredients_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredients"
                android:inputType="text" />

            <Button
                android:id="@+id/add_dish"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:text="@string/add_dish" />
        </LinearLayout>

    </ScrollView>

    <ListView
        android:id="@+id/rootViewDishes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
    </ListView>

</LinearLayout>